--- a/css/_advertising.scss
+++ b/css/_advertising.scss
@@ -6,11 +6,12 @@
 
   img {
     display: none;
-
+// deklarerar z-index så att svg-bilden i showcase hamnar i ett bakre lager
     @media (min-width: 992px) {
-      display: block;
+      // display: block;
       padding: 30px;
       z-index: 1;
+      margin-block: 55px;
     }
 
     @media (min-width: 1200px) {
