--- a/css/_case.scss
+++ b/css/_case.scss
@@ -1,21 +1,16 @@
 .case {
-  // padding: 100px;
   .container {
-    // display: flex;
-    // flex-direction: column;
-
     .headlines {
       margin-top: 130px;
       text-align: center;
       h3 {
         margin-top: 40px;
+        @media (min-width: 768px) {
         margin-bottom: 100px;
+        }
       }
     }
     .content-grid {
-      // display: flex;
-      // flex-direction: column;
-      // text-align: center;
       display: grid;
       grid-template-columns: 1fr;
       text-align: center;
@@ -25,43 +20,38 @@
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
         column-gap: 30px;
-        // row-gap: 50px;
       }
-
-      // @media (min-width:768px) {
-      //     display: grid;
-      //     grid-template-columns: 1fr 1fr;
-      //     grid-template-rows: 1fr 1fr;
-      //     column-gap:30px;
-      //     row-gap: 50px;
-      // }
-
       .box {
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: auto 1fr auto;
-        // width: 70%;
         margin: 0 auto;
-        // text-align: center;
         border-bottom: 1px solid #e7e7e7;
-        // margin-bottom: 60px;
+        margin-top: 60px;
 
         img {
-          // max-width: 100%;
-          // max-height: 100%;
           width: 100%;
           height: auto;
         }
         @media (min-width: 1200px) {
           border-bottom: none;
         }
+
+        .btn-transparent {
+          padding: 10px;
+          margin-bottom: 20%;
+        }
       }
       h4 {
-        margin-top: 70px;
         margin-bottom: 30px;
-        text-align: left;
+        text-align: center;
         padding-bottom: 16px;
         padding-top: 35px;
+
+        @media (min-width: 768px) {
+          text-align: left;
+          margin-top: 70px;
+        }
         @media (min-width: 1200px) {
           border-bottom: 1px solid #e7e7e7;
         }
@@ -87,6 +77,10 @@
           background-color: $btn-yellow;
           // text-decoration: underline;
           text-transform: uppercase;
+        }
+
+        a:hover + h4 {
+          text-decoration: underline;
         }
       }
     }
