--- a/css/_features.scss
+++ b/css/_features.scss
@@ -1,33 +1,45 @@
 //FEATURES
 .features {
   padding: 20px;
-  margin-top: 50px;
-  
+
   @media (min-width: 1200px) {
-    // padding: 70px;
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
+  /* Add a separate container for the border */
+.border-container {
+border: none;
+
+
+  @media (min-width: 1200px) {
+    border: 1px solid #E7E7E7;
+    padding-inline-end: 180px;
+    padding-inline-start: 90px;
+  }
+
   .container {
     @media (min-width: 1200px) {
       display: flex;
       margin: 0 auto;
-      border: 1px solid #E7E7E7;
-      padding: 40px 70px 70px 70px;
-     
+      column-gap: 80px;
+      padding-block: 80px;
     }
+
     .content {
-      text-align: center;
       display: flex;
       flex-direction: column;
+      margin: 0 auto;
+      text-align: center;
+      justify-content: center;
+      align-items: center;
 
       @media (min-width: 1200px) {
         text-align: left;
         line-height: 1.2;
         align-items: flex-start;
         margin-right: 60px;
-        // margin-right: 100px;
       }
-      // padding: 0px;
     }
 
     h2 {
@@ -44,13 +56,10 @@
       font-size: 28px;
       font-weight: 700;
       margin-bottom: 30px;
+      z-index: 0;
 
       @media (min-width: 768px) {
         font-size: 45px;
-      }
-      @media (min-width: 1200px) {
-        // font-size: 45px;
-        // max-width: 90%;
       }
     }
     a {
@@ -60,45 +69,32 @@
       margin-bottom: 20px;
 
       @media (min-width: 768px) {
-        display: inline-block;
-        //  margin-right: 200px;
-        //  margin-left: 200px;
+        display: inline-block; 
       }
 
       @media (min-width: 1200px) {
-        display: block; /* Gör länken till en blocknivå-element */
-        width: 100%; /* Ta upp hela bredden av föräldern */
-        margin: 0; /* Ta bort marginaler */
+        display: block; // Gör länken till en blocknivå-element 
+        width: 100%; // Ta upp hela bredden av föräldern 
+        margin: 0; // Ta bort marginaler 
         padding-top: 20px;
         padding-bottom: 20px;
-        text-align: center; /* Centrera texten inom länken om det behövs */
+        text-align: center; 
       }
     }
-
+// Placerar features-consulting i en grid i 2 col och 2 rader
     .features-consulting {
       @media (min-width: 768px) {
         display: grid;
+        // grid-template-columns: 60% 60%;
         grid-template-columns: 50% 50%;
         grid-template-rows: 50% 50%;
         gap: 10px;
+        column-gap: 50px;
       }
-      @media (min-width: 1200px) {
-        // margin:0;
-        // margin-right: 40px;
-        // margin-left: 90px;
-        padding-top: 40px;
-      }
-
       .box {
         display: flex;
         flex-direction: column;
         align-items: center;
-
-        @media (min-width: 1200px) {
-          margin-right: 30px;
-          padding-right: 100px;
-          width: 130%;
-        }
 
         img {
           margin-bottom: 20px;
@@ -106,7 +102,6 @@
           width: 20%;
           color: #191919;
         }
-
         h3 {
           font-family: $font-family-DM;
           font-size: 22px;
@@ -131,4 +126,5 @@
       }
     }
   }
+}
 }
