--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,15 +1,30 @@
-.footer-content {
-  background-color: #0e1021;
-  padding: 0;
-  position: relative;
+.img-advertising-footer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-rows: 1fr;
+  justify-items: center;
+  gap: 50px;
+  padding:50px;
+  align-items: center;
 
-  .background-lines-right {
-    position: absolute;
-    bottom: 0;
-    right: 0;
+  @media (min-width: 576px) {
+  // grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
   }
+}
 
-  // Samlar min container med boxar i en grid med 5 columner i desktop och 2 i mobil version
+footer {
+  background-color: #0e1021;
+  .footer-top {
+    position: relative;
+    z-index: 0;
+    .background-lines-right {
+      position: absolute;
+      bottom: 0;
+      right: 0;
+      z-index: -1;
+      opacity: 0.15;
+    }
+  }
   .container {
     display: grid;
     grid-template-columns: 1fr;
@@ -17,6 +32,8 @@
     grid-template-rows: repeat(5, auto);
     justify-items: center;
     padding-top: 90px;
+    position: relative;
+    z-index: -1;
 
     @media (min-width: 576px) {
       grid-template-columns: 1fr 1fr;
@@ -29,7 +46,6 @@
     }
     @media (min-width: 1200px) {
       grid-template-columns: repeat(5, 1fr);
-      grid-template-rows: 1fr;
       padding-block: 120px;
       // column-gap: 10px;
     }
@@ -53,7 +69,7 @@
         font-size: 22px;
         font-weight: 700;
         color: #ffffff;
-        margin-left: 30px;
+        // margin-left: 30px;
 
         @media (min-width: 992px) {
           // margin-bottom: 10px;
@@ -76,9 +92,10 @@
         font-weight: 400;
         color: #fff;
         text-decoration: none;
-                  margin-left: 30px;
+        // margin-left: 30px;
       }
     }
+
     .box-1 {
       grid-column: 1/3;
       grid-row: 1/2;
@@ -161,7 +178,7 @@
         grid-row: 1/2;
       }
 
-      h4{
+      h4 {
         margin-left: 0;
       }
     }
@@ -191,9 +208,9 @@
     flex-direction: column;
     border-top: 1px solid #707070;
     text-align: center;
-    padding-inline:15px;
+    padding-inline: 15px;
     padding-block: 30px;
-    gap:20px;
+    gap: 20px;
 
     @media (min-width: 768px) {
       flex-direction: row;
