--- a/css/_header.scss
+++ b/css/_header.scss
@@ -6,7 +6,7 @@ header {
   margin-left: auto;
   margin-right: auto;
   padding: 15px;
-
+// Placerar hela innehållet i headern i en flex
   .container {
     display: flex;
     align-items: center;
@@ -40,7 +40,7 @@ header {
       @media (min-width: 992px) {
         display: block;
       }
-
+// Placerar top-menyn i en flex
       .top-menu {
         display: flex;
         justify-content: flex-end;
@@ -51,11 +51,13 @@ header {
           justify-content: space-between;
         }
 
+// Tar bort kontakt-information upp till 1200px skärmstorlek
         .contact-information {
           display: none;
           padding: 10px;
           width: 100%;
 
+// Visar kontaktinformation
           @media (min-width: 1200px) {
             display: flex;
           }
@@ -81,6 +83,7 @@ header {
         }
 
         .social-media {
+          // Tar bort understreck för länkar
          a {
           text-decoration: none;
          }
@@ -99,12 +102,12 @@ header {
           }
         }
       }
-
+// placerar main-menyn i en flex och centrerar
       .main-menu {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-top: 10px;
+        padding-top: 20px;
         nav {
           a {
             display: inline-block;
@@ -112,9 +115,9 @@ header {
             color: $text-color-dark;
             margin-right: 35px;
             position: relative;
-
+// vid aktiv länk, öka fontweight
             &.active {
-              font-weight: 500;
+              font-weight: 600;
             }
 
             &.active::after,
