--- a/css/style.css
+++ b/css/style.css
@@ -21,28 +21,36 @@
   padding-top: 40px;
   padding-bottom: 40px;
   text-align: center;
+  margin-bottom: 30px;
+  margin-top: 20px;
 }
 @media (min-width: 1200px) {
-  .showcase .container .content {
+  .showcase .container {
     text-align: left;
+    margin-bottom: 0;
+    margin-top: 0;
   }
 }
-.showcase .container .content h1 {
+.showcase .container h1 {
   font-family: "DM Sans", sans-serif;
   font-weight: 700;
   font-size: 40px;
 }
 @media (min-width: 768px) {
-  .showcase .container .content h1 {
+  .showcase .container h1 {
     font-size: 70px;
   }
 }
 @media (min-width: 1400px) {
-  .showcase .container .content h1 {
+  .showcase .container h1 {
     font-size: 86px;
   }
 }
-.showcase .container .content h3 {
+.showcase .container p {
+  margin-bottom: 55px;
+  width: 90%;
+}
+.showcase .container h3 {
   font-size: 18px;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -50,30 +58,28 @@
   padding-right: 10px;
 }
 @media (min-width: 768px) {
-  .showcase .container .content h3 {
+  .showcase .container h3 {
     font-size: 20px;
     padding-left: 0;
     padding-right: 0;
   }
 }
-.showcase .container .content a {
-  margin-right: 40px;
-  margin-left: 40px;
+.showcase .container a {
   display: block;
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  .showcase .container .content a {
+  .showcase .container a {
     display: inline-block;
     margin-right: 10px;
   }
 }
-.showcase .container img {
+.showcase img {
   margin-right: -50px;
   display: none;
 }
 @media (min-width: 1200px) {
-  .showcase .container img {
+  .showcase img {
     display: block;
   }
 }
@@ -88,42 +94,58 @@
 }
 @media (min-width: 992px) {
   .img-advertising img {
-    display: block;
     padding: 30px;
     z-index: 1;
+    margin-block: 55px;
   }
 }
 .features {
   padding: 20px;
-  margin-top: 50px;
+  /* Add a separate container for the border */
 }
 @media (min-width: 1200px) {
   .features {
     display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
+.features .border-container {
+  border: none;
+}
+@media (min-width: 1200px) {
+  .features .border-container {
+    border: 1px solid #E7E7E7;
+    padding-inline-end: 180px;
+    padding-inline-start: 90px;
   }
 }
 @media (min-width: 1200px) {
-  .features .container {
+  .features .border-container .container {
     display: flex;
     margin: 0 auto;
-    border: 1px solid #E7E7E7;
-    padding: 40px 70px 70px 70px;
+    -moz-column-gap: 80px;
+         column-gap: 80px;
+    padding-block: 80px;
   }
 }
-.features .container .content {
-  text-align: center;
+.features .border-container .container .content {
   display: flex;
   flex-direction: column;
+  margin: 0 auto;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 @media (min-width: 1200px) {
-  .features .container .content {
+  .features .border-container .container .content {
     text-align: left;
     line-height: 1.2;
     align-items: flex-start;
     margin-right: 60px;
   }
 }
-.features .container h2 {
+.features .border-container .container h2 {
   color: #F94D1C;
   font-size: 18px;
   font-family: "Inter", sans-serif;
@@ -131,76 +153,67 @@
   margin-top: 30px;
   z-index: 0;
 }
-.features .container h3 {
+.features .border-container .container h3 {
   color: #191919;
   font-family: "DM Sans", sans-serif;
   font-size: 28px;
   font-weight: 700;
   margin-bottom: 30px;
+  z-index: 0;
 }
 @media (min-width: 768px) {
-  .features .container h3 {
+  .features .border-container .container h3 {
     font-size: 45px;
   }
 }
-.features .container a {
+.features .border-container .container a {
   margin-right: 40px;
   margin-left: 40px;
   display: block;
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  .features .container a {
+  .features .border-container .container a {
     display: inline-block;
   }
 }
 @media (min-width: 1200px) {
-  .features .container a {
-    display: block; /* Gör länken till en blocknivå-element */
-    width: 100%; /* Ta upp hela bredden av föräldern */
-    margin: 0; /* Ta bort marginaler */
+  .features .border-container .container a {
+    display: block;
+    width: 100%;
+    margin: 0;
     padding-top: 20px;
     padding-bottom: 20px;
-    text-align: center; /* Centrera texten inom länken om det behövs */
+    text-align: center;
   }
 }
 @media (min-width: 768px) {
-  .features .container .features-consulting {
+  .features .border-container .container .features-consulting {
     display: grid;
     grid-template-columns: 50% 50%;
     grid-template-rows: 50% 50%;
     gap: 10px;
+    -moz-column-gap: 50px;
+         column-gap: 50px;
   }
 }
-@media (min-width: 1200px) {
-  .features .container .features-consulting {
-    padding-top: 40px;
-  }
-}
-.features .container .features-consulting .box {
+.features .border-container .container .features-consulting .box {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-@media (min-width: 1200px) {
-  .features .container .features-consulting .box {
-    margin-right: 30px;
-    padding-right: 100px;
-    width: 130%;
-  }
-}
-.features .container .features-consulting .box img {
+.features .border-container .container .features-consulting .box img {
   margin-bottom: 20px;
   margin-top: 20px;
   width: 20%;
   color: #191919;
 }
-.features .container .features-consulting .box h3 {
+.features .border-container .container .features-consulting .box h3 {
   font-family: "DM Sans", sans-serif;
   font-size: 22px;
   font-weight: 700;
 }
-.features .container .features-consulting .box p {
+.features .border-container .container .features-consulting .box p {
   padding: 10px 10px;
   text-align: center;
   font-family: "Inter", sans-serif;
@@ -208,13 +221,13 @@
   color: #707070;
 }
 @media (min-width: 1200px) {
-  .features .container .features-consulting .box p {
+  .features .border-container .container .features-consulting .box p {
     text-align: left;
     padding: 0;
   }
 }
 @media (min-width: 1200px) {
-  .features .container .features-consulting .box {
+  .features .border-container .container .features-consulting .box {
     align-items: flex-start;
   }
 }
@@ -435,7 +448,7 @@ header .container .menu .main-menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 10px;
+  padding-top: 20px;
 }
 header .container .menu .main-menu nav a {
   display: inline-block;
@@ -445,7 +458,7 @@ header .container .menu .main-menu nav a {
   position: relative;
 }
 header .container .menu .main-menu nav a.active {
-  font-weight: 500;
+  font-weight: 600;
 }
 header .container .menu .main-menu nav a.active::after, header .container .menu .main-menu nav a:hover::after {
   content: "";
@@ -606,6 +619,7 @@ header .container .btn-login {
   position: relative;
   top: 200px;
   left: 0;
+  z-index: 1;
 }
 .choose-us .container .main-img-container .frame-grey {
   display: none;
@@ -615,12 +629,19 @@ header .container .btn-login {
     display: block;
     background-color: #F0EFE9;
     width: 290%;
-    top: 60px;
+    position: absolute;
+    top: 20px;
     left: 10px;
-    height: 410px;
+    height: 370px;
     margin-top: 50px;
     margin-left: -20px;
     z-index: -1;
+  }
+}
+@media (min-width: 1400px) {
+  .choose-us .container .main-img-container .frame-grey {
+    top: 30px;
+    height: 410px;
   }
 }
 .choose-us .container .main-img-container .main-img {
@@ -637,7 +658,7 @@ header .container .btn-login {
   .choose-us .container .main-img-container .main-img {
     display: block;
     position: absolute;
-    top: -130px;
+    top: -80px;
     left: 70px;
     width: 200%;
   }
@@ -666,7 +687,7 @@ header .container .btn-login {
 }
 @media (min-width: 1200px) {
   .choose-us .content .headlines h2 {
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 }
 @media (min-width: 1200px) {
@@ -679,12 +700,15 @@ header .container .btn-login {
   display: flex;
   flex-direction: column;
   row-gap: 10px;
+  background-color: rgba(240, 239, 233, 0.6392156863);
+  border-radius: 7rem;
 }
 @media (min-width: 1200px) {
   .choose-us .content .box {
     display: grid;
     grid-template-columns: auto 1fr 1fr;
     grid-template-rows: 1fr 1fr;
+    background-color: #FFF;
   }
 }
 .choose-us .content .box a {
@@ -724,7 +748,11 @@ header .container .btn-login {
 }
 .case .container .headlines h3 {
   margin-top: 40px;
-  margin-bottom: 100px;
+}
+@media (min-width: 768px) {
+  .case .container .headlines h3 {
+    margin-bottom: 100px;
+  }
 }
 .case .container .content-grid {
   display: grid;
@@ -746,6 +774,7 @@ header .container .btn-login {
   grid-template-rows: auto 1fr auto;
   margin: 0 auto;
   border-bottom: 1px solid #e7e7e7;
+  margin-top: 60px;
 }
 .case .container .content-grid .box img {
   width: 100%;
@@ -756,12 +785,21 @@ header .container .btn-login {
     border-bottom: none;
   }
 }
+.case .container .content-grid .box .btn-transparent {
+  padding: 10px;
+  margin-bottom: 20%;
+}
 .case .container .content-grid h4 {
-  margin-top: 70px;
   margin-bottom: 30px;
-  text-align: left;
+  text-align: center;
   padding-bottom: 16px;
   padding-top: 35px;
+}
+@media (min-width: 768px) {
+  .case .container .content-grid h4 {
+    text-align: left;
+    margin-top: 70px;
+  }
 }
 @media (min-width: 1200px) {
   .case .container .content-grid h4 {
@@ -790,6 +828,9 @@ header .container .btn-login {
   border-radius: 25px;
   background-color: #F9D783;
   text-transform: uppercase;
+}
+.case .container .content-grid a a:hover + h4 {
+  text-decoration: underline;
 }
 .case .container .btn-black {
   margin-bottom: 30px;
@@ -898,7 +939,7 @@ header .container .btn-login {
 }
 .team .container .top-heading h2 {
   margin-top: 120px;
-  margin-bottom: 20px;
+  margin-bottom: 30px;
 }
 @media (min-width: 992px) {
   .team .container .top-heading h2 {
@@ -992,7 +1033,11 @@ header .container .btn-login {
 }
 .team .dots {
   text-align: center;
-  padding-bottom: 120px;
+}
+@media (min-width: 992px) {
+  .team .dots {
+    padding-bottom: 120px;
+  }
 }
 .team .dots .dot {
   height: 15px;
@@ -1012,9 +1057,13 @@ header .container .btn-login {
   padding-block: 9rem;
 }
 .testimonial .container {
-  padding-inline: 6rem;
   background-color: #fff;
   padding-block: 10rem;
+}
+@media (min-width: 992px) {
+  .testimonial .container {
+    padding-inline: 6rem;
+  }
 }
 .testimonial .container .top-heading {
   text-align: center;
@@ -1110,7 +1159,12 @@ header .container .btn-login {
   }
 }
 .testimonial .container .center-content {
-  margin-top: 110px;
+  margin-top: 60px;
+}
+@media (min-width: 992px) {
+  .testimonial .container .center-content {
+    margin-top: 110px;
+  }
 }
 
 .articles-news .container .top-heading {
@@ -1182,10 +1236,8 @@ header .container .btn-login {
   display: flex;
   flex-direction: column;
 }
-.articles-news .container .articles article .img-1 {
-  max-width: 100%;
-  max-height: 100%;
-  width: auto;
+.articles-news .container .articles article img {
+  width: 80%;
   height: auto;
 }
 .articles-news .container .articles article .box-date {
@@ -1227,6 +1279,7 @@ header .container .btn-login {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 80%;
 }
 .articles-news .container .articles article .content h4 {
   font-family: "Inter", sans-serif;
@@ -1284,43 +1337,57 @@ header .container .btn-login {
   background-color: #191919;
 }
 
-.footer-content {
-  background-color: #0e1021;
-  padding: 0;
-  position: relative;
+.img-advertising-footer {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-rows: 1fr;
+  justify-items: center;
+  gap: 50px;
+  padding: 50px;
+  align-items: center;
 }
-.footer-content .background-lines-right {
+footer {
+  background-color: #0e1021;
+}
+footer .footer-top {
+  position: relative;
+  z-index: 0;
+}
+footer .footer-top .background-lines-right {
   position: absolute;
   bottom: 0;
   right: 0;
+  z-index: -1;
+  opacity: 0.15;
 }
-.footer-content .container {
+footer .container {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(5, auto);
   justify-items: center;
   padding-top: 90px;
+  position: relative;
+  z-index: -1;
 }
 @media (min-width: 576px) {
-  .footer-content .container {
+  footer .container {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
   }
 }
 @media (min-width: 992px) {
-  .footer-content .container {
+  footer .container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .container {
+  footer .container {
     grid-template-columns: repeat(5, 1fr);
-    grid-template-rows: 1fr;
     padding-block: 120px;
   }
 }
-.footer-content .container .box {
+footer .container .box {
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -1328,7 +1395,7 @@ header .container .btn-login {
   margin-bottom: 40px;
 }
 @media (min-width: 992px) {
-  .footer-content .container .box {
+  footer .container .box {
     margin-bottom: 30px;
     gap: 10px;
     -moz-column-gap: 10px;
@@ -1336,157 +1403,155 @@ header .container .btn-login {
     text-align: left;
   }
 }
-.footer-content .container .box h4 {
+footer .container .box h4 {
   font-family: "DM Sans", sans-serif;
   font-size: 22px;
   font-weight: 700;
   color: #ffffff;
-  margin-left: 30px;
 }
 @media (min-width: 992px) {
-  .footer-content .container .box h4 {
+  footer .container .box h4 {
     margin-bottom: 50px;
   }
 }
-.footer-content .container .box p {
+footer .container .box p {
   font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #fff;
   margin-top: 30px;
 }
-.footer-content .container .box a {
+footer .container .box a {
   font-family: "Inter", sans-serif;
   font-size: 16px;
   font-weight: 400;
   color: #fff;
   text-decoration: none;
-  margin-left: 30px;
 }
-.footer-content .container .box-1 {
+footer .container .box-1 {
   grid-column: 1/3;
   grid-row: 1/2;
   margin-top: -10px;
   width: 70%;
 }
 @media (min-width: 576px) {
-  .footer-content .container .box-1 {
+  footer .container .box-1 {
     grid-column: 1/3;
     width: 50%;
   }
 }
 @media (min-width: 992px) {
-  .footer-content .container .box-1 {
+  footer .container .box-1 {
     width: 120%;
     grid-column: 1/2;
     grid-row: 1/2;
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .container .box-1 {
+  footer .container .box-1 {
     grid-column: 1/2;
     grid-row: 1/2;
   }
 }
-.footer-content .container .box-1 img {
+footer .container .box-1 img {
   align-self: center;
 }
 @media (min-width: 992px) {
-  .footer-content .container .box-1 img {
+  footer .container .box-1 img {
     align-self: flex-start;
   }
 }
-.footer-content .container .box-2 {
+footer .container .box-2 {
   grid-column: 1/2;
   grid-row: 2/3;
 }
 @media (min-width: 576px) {
-  .footer-content .container .box-2 {
+  footer .container .box-2 {
     grid-column: 1/2;
     grid-row: 2/3;
   }
 }
 @media (min-width: 992px) {
-  .footer-content .container .box-2 {
+  footer .container .box-2 {
     grid-column: 2/3;
     grid-row: 1/2;
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .container .box-2 {
+  footer .container .box-2 {
     grid-row: 1/2;
   }
 }
-.footer-content .container .box-3 {
+footer .container .box-3 {
   grid-row: 3/4;
 }
 @media (min-width: 576px) {
-  .footer-content .container .box-3 {
+  footer .container .box-3 {
     grid-column: 2/3;
     grid-row: 2/3;
   }
 }
 @media (min-width: 992px) {
-  .footer-content .container .box-3 {
+  footer .container .box-3 {
     grid-column: 3/4;
     grid-row: 1/2;
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .container .box-3 {
+  footer .container .box-3 {
     grid-column: 3/4;
     grid-row: 1/2;
   }
 }
-.footer-content .container .box-4 {
+footer .container .box-4 {
   text-transform: none;
   grid-column: 1/2;
   grid-row: 4/5;
 }
 @media (min-width: 576px) {
-  .footer-content .container .box-4 {
+  footer .container .box-4 {
     grid-column: 1/2;
     grid-row: 3/4;
   }
 }
 @media (min-width: 992px) {
-  .footer-content .container .box-4 {
+  footer .container .box-4 {
     grid-column: 4/5;
     grid-row: 1/2;
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .container .box-4 {
+  footer .container .box-4 {
     grid-column: 4/5;
     grid-row: 1/2;
   }
 }
-.footer-content .container .box-4 h4 {
+footer .container .box-4 h4 {
   margin-left: 0;
 }
-.footer-content .container .box-5 {
+footer .container .box-5 {
   text-transform: none;
   grid-row: 5/6;
 }
 @media (min-width: 576px) {
-  .footer-content .container .box-5 {
+  footer .container .box-5 {
     grid-column: 2/3;
     grid-row: 3/4;
   }
 }
 @media (min-width: 992px) {
-  .footer-content .container .box-5 {
+  footer .container .box-5 {
     grid-column: 5/6;
     grid-row: 1/2;
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .container .box-5 {
+  footer .container .box-5 {
     grid-column: 5/6;
     grid-row: 1/2;
   }
 }
-.footer-content .bottom {
+footer .bottom {
   display: flex;
   flex-direction: column;
   border-top: 1px solid #707070;
@@ -1496,7 +1561,7 @@ header .container .btn-login {
   gap: 20px;
 }
 @media (min-width: 768px) {
-  .footer-content .bottom {
+  footer .bottom {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
@@ -1505,25 +1570,25 @@ header .container .btn-login {
   }
 }
 @media (min-width: 1200px) {
-  .footer-content .bottom {
+  footer .bottom {
     padding-block: 30px;
     padding-inline: 160px;
   }
 }
-.footer-content .bottom .footer-txt {
+footer .bottom .footer-txt {
   color: #fff;
   margin-bottom: 0;
 }
-.footer-content .bottom .social-media-footer a {
+footer .bottom .social-media-footer a {
   text-decoration: none;
   margin-left: 10px;
 }
 @media (min-width: 1200px) {
-  .footer-content .bottom .social-media-footer a {
+  footer .bottom .social-media-footer a {
     margin-right: 30px;
   }
 }
-.footer-content .bottom .social-media-footer a i {
+footer .bottom .social-media-footer a i {
   color: #fff;
 }
 
@@ -1539,14 +1604,6 @@ body {
   font-weight: 400;
   margin: 0;
   text-transform: capitalize;
-}
-
-main {
-  grid-area: main;
-}
-
-header {
-  grid-area: header;
 }
 
 .headlines h2 {
@@ -1604,7 +1661,7 @@ h4 {
 }
 .btn-yellow:hover {
   background-color: #191919;
-  border: 10px solid #191919;
+  border: 5px solid #191919;
   color: #F0EFE9;
 }
 
@@ -1624,7 +1681,7 @@ h4 {
 }
 .btn-transparent:hover {
   background-color: #191919;
-  border: 10px solid #191919;
+  border: 5px solid #191919;
   color: #F0EFE9;
 }
 
@@ -1644,7 +1701,7 @@ h4 {
 }
 .btn-black:hover {
   background-color: #F9D783;
-  border: 10px solid #F9D783;
+  border: 5px solid #F9D783;
   color: #191919;
 }
 
@@ -1657,11 +1714,11 @@ h4 {
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
-  width: 50px; /* Ange den önskade bredden här */
+  width: 50px;
   height: 50px;
 }
 .btn-circle:hover {
   background-color: #191919;
-  border: 10px solid #191919;
+  border: 5px solid #191919;
   color: #F0EFE9;
 }
