--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -1,19 +1,25 @@
-.img-advertising-footer {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
-  grid-template-rows: 1fr;
-  justify-items: center;
-  gap: 50px;
-  padding:50px;
-  align-items: center;
 
-  @media (min-width: 576px) {
-  // grid-template-columns: repeat(auto-fill, minmax(170px, 1fr));
-  }
-}
 
 footer {
   background-color: #0e1021;
+
+  .img-advertising-footer {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
+    grid-template-rows: 1fr;
+    justify-items: center;
+    gap: 50px;
+    padding:50px;
+    align-items: center;
+    @media (min-width: 992px) {
+      display: none;
+    }
+  
+    @media (min-width: 1360px) {
+    // grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    }
+  }
+
   .footer-top {
     position: relative;
     z-index: 0;
@@ -43,6 +49,7 @@ footer {
     @media (min-width: 992px) {
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: 1fr;
+      gap: 15px;
     }
     @media (min-width: 1200px) {
       grid-template-columns: repeat(5, 1fr);
