--- a/css/index/_about.scss
+++ b/css/index/_about.scss
@@ -49,7 +49,11 @@
       }
 
       p {
-        padding: 20px;
+        padding: 13px;
+
+        @media (min-width: 992px) {
+          padding: 20px;
+        }
         @media (min-width: 1200px) {
           padding: 10px;
           // line-height: 2rem;
@@ -65,13 +69,41 @@
           margin-right: 44px;
         }
       }
-
-      .btn-circle {
-        i {
-        }
-      }
       @media (min-width: 1200px) {
         margin-left: 35px;
+      }
+
+      .flex-row {
+
+        @media (min-width: 992px) {
+          display: flex;
+          text-align: center;
+          align-items: baseline;
+          justify-content: center;
+        }
+        .btn-top {
+          display: flex;
+          justify-content: center;
+          margin-bottom: 20px;
+          .btn-black {
+            margin-right: 0;
+            @media (min-width: 992px) {
+              margin-right: 15px;
+            }
+          }
+
+        }
+        .btn-video {
+          display: flex;
+          justify-content: center;
+          align-items: baseline;
+          @media (min-width: 992px) {
+            display: flex;
+            text-align: center;
+            align-items: baseline;
+            justify-content: center;
+          }
+        }
       }
     }
 
