--- a/css/index/_advertising.scss
+++ b/css/index/_advertising.scss
@@ -8,7 +8,7 @@
     display: none;
 // deklarerar z-index så att svg-bilden i showcase hamnar i ett bakre lager
     @media (min-width: 992px) {
-      // display: block;
+      display: block;
       padding: 30px;
       z-index: 1;
       margin-block: 55px;
@@ -22,3 +22,6 @@
     }
   }
 }
+
+
+
