--- a/css/index/_articles-news.scss
+++ b/css/index/_articles-news.scss
@@ -69,14 +69,16 @@
         display: flex;
         flex-direction: column;
 
+
         img{
           width: 80%;
           // max-height: 100%;
+          margin: 0 auto;
           height: auto;
         }
         .img-1 {
           // max-width: 100%;
- 
+
           // width: auto;
 
         }
@@ -86,7 +88,7 @@
           align-items: center;
           justify-content: center;
           top: 16px;
-          left: 22px;
+          left: 38px;
           text-align: center;
           background-color: #f9d783;
           width: 56px;
@@ -112,7 +114,7 @@
 
           @media (min-width: 768px) {
             top: 16px;
-            left: 16px;
+            left: 50px;
           }
         }
 
@@ -121,6 +123,7 @@
           flex-direction: column;
           align-items: center;
           max-width: 80%;
+          margin: 0 auto;
 
           h4 {
             font-family: $font-family-Inter;
