--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,7 @@
 }
 @media (min-width: 992px) {
   .img-advertising img {
+    display: block;
     padding: 30px;
     z-index: 1;
     margin-block: 55px;
@@ -281,7 +282,12 @@
   }
 }
 .about .container .content p {
-  padding: 20px;
+  padding: 13px;
+}
+@media (min-width: 992px) {
+  .about .container .content p {
+    padding: 20px;
+  }
 }
 @media (min-width: 1200px) {
   .about .container .content p {
@@ -302,6 +308,40 @@
 @media (min-width: 1200px) {
   .about .container .content {
     margin-left: 35px;
+  }
+}
+@media (min-width: 992px) {
+  .about .container .content .flex-row {
+    display: flex;
+    text-align: center;
+    align-items: baseline;
+    justify-content: center;
+  }
+}
+.about .container .content .flex-row .btn-top {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+.about .container .content .flex-row .btn-top .btn-black {
+  margin-right: 0;
+}
+@media (min-width: 992px) {
+  .about .container .content .flex-row .btn-top .btn-black {
+    margin-right: 15px;
+  }
+}
+.about .container .content .flex-row .btn-video {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+}
+@media (min-width: 992px) {
+  .about .container .content .flex-row .btn-video {
+    display: flex;
+    text-align: center;
+    align-items: baseline;
+    justify-content: center;
   }
 }
 .about .container .founder img {
@@ -615,6 +655,85 @@ header .container .btn-login {
 .choose-us .container {
   z-index: 0;
 }
+.choose-us .container .content {
+  grid-column: span 2;
+  text-align: center;
+}
+.choose-us .container .content .headlines {
+  margin-top: 80px;
+  margin-bottom: 60px;
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .headlines {
+    text-align: left;
+  }
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .headlines h2 {
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .headlines h3 {
+    margin-bottom: 60px;
+    text-align: left;
+    width: 36%;
+  }
+}
+.choose-us .container .content .box {
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  background-color: rgba(240, 239, 233, 0.6392156863);
+  border-radius: 7rem;
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .box {
+    display: grid;
+    grid-template-columns: auto 1fr;
+    grid-template-rows: 1fr 1fr;
+    background-color: #FFF;
+    width: 50%;
+  }
+}
+.choose-us .container .content .box a {
+  margin-top: 10px;
+  grid-row: 1/4;
+  grid-column: 1/1;
+}
+.choose-us .container .content .box a img {
+  border-radius: 50%;
+  border: 1px solid #e7e7e7;
+  padding: 10px;
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .box a {
+    margin-right: 30px;
+  }
+}
+.choose-us .container .content .box h4 {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .box h4 {
+    text-align: start;
+  }
+}
+.choose-us .container .content .box p {
+  grid-row: 2/3;
+  grid-column: 2/3;
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .choose-us .container .content .box p {
+    margin-top: -2px;
+    text-align: left;
+  }
+}
 .choose-us .container .main-img-container {
   position: relative;
   top: 200px;
@@ -628,120 +747,41 @@ header .container .btn-login {
   .choose-us .container .main-img-container .frame-grey {
     display: block;
     background-color: #F0EFE9;
-    width: 290%;
+    width: 70%;
     position: absolute;
-    top: 20px;
-    left: 10px;
+    top: 40px;
+    right: -150px;
     height: 370px;
-    margin-top: 50px;
-    margin-left: -20px;
     z-index: -1;
   }
 }
 @media (min-width: 1400px) {
   .choose-us .container .main-img-container .frame-grey {
-    top: 30px;
-    height: 410px;
+    top: 80px;
+    height: 390px;
+    right: -190px;
   }
 }
-.choose-us .container .main-img-container .main-img {
+.choose-us .container .main-img {
   display: none;
 }
 @media (min-width: 992px) {
-  .choose-us .container .main-img-container .main-img {
+  .choose-us .container .main-img {
     width: 60%;
     margin: 0 auto;
     text-align: center;
   }
 }
 @media (min-width: 1200px) {
-  .choose-us .container .main-img-container .main-img {
+  .choose-us .container .main-img {
     display: block;
     position: absolute;
-    top: -80px;
-    left: 70px;
-    width: 200%;
+    right: -20px;
+    top: -100px;
+    width: 50%;
+    z-index: 2;
   }
 }
-@media (min-width: 1200px) {
-  .choose-us .container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: auto;
-    margin-bottom: 15px;
-  }
-}
-.choose-us .content {
-  grid-column: span 2;
-  text-align: center;
-}
-.choose-us .content .headlines {
-  margin-top: 80px;
-  margin-bottom: 60px;
-  text-align: center;
-}
-@media (min-width: 1200px) {
-  .choose-us .content .headlines {
-    text-align: left;
-  }
-}
-@media (min-width: 1200px) {
-  .choose-us .content .headlines h2 {
-    margin-bottom: 20px;
-  }
-}
-@media (min-width: 1200px) {
-  .choose-us .content .headlines h3 {
-    margin-bottom: 60px;
-  }
-}
-.choose-us .content .box {
-  margin-bottom: 20px;
-  display: flex;
-  flex-direction: column;
-  row-gap: 10px;
-  background-color: rgba(240, 239, 233, 0.6392156863);
-  border-radius: 7rem;
-}
-@media (min-width: 1200px) {
-  .choose-us .content .box {
-    display: grid;
-    grid-template-columns: auto 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    background-color: #FFF;
-  }
-}
-.choose-us .content .box a {
-  margin-top: 10px;
-  grid-row: 1/4;
-  grid-column: 1/1;
-}
-.choose-us .content .box a img {
-  border-radius: 50%;
-  border: 1px solid #e7e7e7;
-  padding: 10px;
-}
-@media (min-width: 1200px) {
-  .choose-us .content .box a {
-    margin-right: 30px;
-  }
-}
-.choose-us .content .box h4 {
-  grid-row: 1;
-  grid-column: 2/2;
-  text-align: center;
-}
-.choose-us .content .box p {
-  grid-row: 2/3;
-  grid-column: 1/4;
-}
-@media (min-width: 1200px) {
-  .choose-us .content .box p {
-    margin-left: -65px;
-    margin-top: -2px;
-  }
-}
-
 .case .container .headlines {
   margin-top: 130px;
   text-align: center;
@@ -750,6 +790,11 @@ header .container .btn-login {
   margin-top: 40px;
 }
 @media (min-width: 768px) {
+  .case .container .headlines h3 {
+    margin-bottom: 20px;
+  }
+}
+@media (min-width: 1200px) {
   .case .container .headlines h3 {
     margin-bottom: 100px;
   }
@@ -787,7 +832,7 @@ header .container .btn-login {
 }
 .case .container .content-grid .box .btn-transparent {
   padding: 10px;
-  margin-bottom: 20%;
+  margin-bottom: 0%;
 }
 .case .container .content-grid h4 {
   margin-bottom: 30px;
@@ -827,10 +872,6 @@ header .container .btn-login {
 .case .container .content-grid a:hover {
   border-radius: 25px;
   background-color: #F9D783;
-  text-transform: uppercase;
-}
-.case .container .content-grid a a:hover + h4 {
-  text-decoration: underline;
 }
 .case .container .btn-black {
   margin-bottom: 30px;
@@ -841,6 +882,10 @@ header .container .btn-login {
 .case .container .center-content {
   margin-top: 50px;
   margin-bottom: 90px;
+}
+
+.case > .container > .content-grid .box:hover {
+  text-decoration: underline;
 }
 
 .subscribe {
@@ -1238,6 +1283,7 @@ header .container .btn-login {
 }
 .articles-news .container .articles article img {
   width: 80%;
+  margin: 0 auto;
   height: auto;
 }
 .articles-news .container .articles article .box-date {
@@ -1246,7 +1292,7 @@ header .container .btn-login {
   align-items: center;
   justify-content: center;
   top: 16px;
-  left: 22px;
+  left: 38px;
   text-align: center;
   background-color: #f9d783;
   width: 56px;
@@ -1272,7 +1318,7 @@ header .container .btn-login {
 @media (min-width: 768px) {
   .articles-news .container .articles article .box-date {
     top: 16px;
-    left: 16px;
+    left: 50px;
   }
 }
 .articles-news .container .articles article .content {
@@ -1280,6 +1326,7 @@ header .container .btn-login {
   flex-direction: column;
   align-items: center;
   max-width: 80%;
+  margin: 0 auto;
 }
 .articles-news .container .articles article .content h4 {
   font-family: "Inter", sans-serif;
@@ -1337,17 +1384,22 @@ header .container .btn-login {
   background-color: #191919;
 }
 
-.img-advertising-footer {
+footer {
+  background-color: #0e1021;
+}
+footer .img-advertising-footer {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(170px, 1fr));
   grid-template-rows: 1fr;
   justify-items: center;
   gap: 50px;
   padding: 50px;
   align-items: center;
 }
-footer {
-  background-color: #0e1021;
+@media (min-width: 992px) {
+  footer .img-advertising-footer {
+    display: none;
+  }
 }
 footer .footer-top {
   position: relative;
@@ -1379,6 +1431,7 @@ footer .container {
   footer .container {
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 1fr;
+    gap: 15px;
   }
 }
 @media (min-width: 1200px) {
@@ -1590,6 +1643,28 @@ footer .bottom .social-media-footer a {
 }
 footer .bottom .social-media-footer a i {
   color: #fff;
+}
+
+.showcase {
+  position: relative;
+}
+.showcase .backround-lines {
+  position: absolute;
+}
+.showcase .container .content {
+  text-align: center;
+}
+.showcase .container .content .small-h1 {
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  color: #707070;
+}
+.showcase .container .content .large-p {
+  font-family: "DM Sans", sans-serif;
+  font-size: 56px;
+  font-weight: 700;
+  color: #191919;
 }
 
 * {
