Started working with form on contacts

--- a/css/contacts/_contacts.scss
+++ b/css/contacts/_contacts.scss
@@ -1,7 +1,9 @@
 .showcase{
     position: relative;
+    z-index: -1;
     .backround-lines{
         position: absolute;
+        z-index: 1;
     }
     .container{
         .content{
@@ -19,5 +21,36 @@
                 color: #191919;
             }
         }
+
     }
+}
+
+.contact-form{
+    background-color: #F0EFE9;
+    z-index: 1;
+    h2{
+        font-size: 45px;
+        color: #191919;
+        font-weight: 700;
+        text-transform: none;
+    }
+}
+
+    .form-label {
+        display: block;
+
+    }
+    .form-input {
+        display: block;
+        width: 100%;
+        padding: 15px;
+        border: none;
+        border-radius: 25px;
+    }
+
+textarea {
+    resize: none;
+    height: 200px;
+    border-radius: 25px;
+    // width: 40%;
 }
