--- a/css/index/_articles-news.scss
+++ b/css/index/_articles-news.scss
@@ -40,6 +40,9 @@
         align-items: center;
         margin: 0 auto;
         margin-bottom: 60px;
+        &:hover{
+          transform: scale(1.1);
+        }
 
         @media (min-width: 992px) {
           display: flex;
