--- a/css/index/_case.scss
+++ b/css/index/_case.scss
@@ -78,6 +78,7 @@
         &:hover {
           border-radius: 25px;
           background-color: $btn-yellow;
+          transform: scale(1.1);
         }
       }
     }
