--- a/css/index/_services.scss
+++ b/css/index/_services.scss
@@ -76,8 +76,8 @@
           justify-content: center;
           padding: 26px 28px;
           &:hover {
-            background-color: #ffffff;
-            color: $text-color-dark;
+            // background-color: #ffffff;
+            // color: $text-color-dark;
             border: none;
           }
          
@@ -116,7 +116,7 @@
   }
 }
 
-.container > a {
+.btn-center {
   margin-top: 30px;
   margin: 0 auto;
 }
