--- a/css/_footer.scss
+++ b/css/_footer.scss
@@ -100,6 +100,11 @@ footer {
         color: #fff;
         text-decoration: none;
         // margin-left: 30px;
+
+        &:hover{
+          text-decoration: underline;
+          // color: $btn-yellow;
+        }
       }
     }
 
@@ -191,7 +196,6 @@ footer {
     }
     .box-5 {
       text-transform: none;
-      // grid-column: 3 / 4;
       grid-row: 5/6;
 
       @media (min-width: 576px) {
@@ -242,12 +246,19 @@ footer {
         text-decoration: none;
         margin-left: 10px;
 
+
         @media (min-width: 1200px) {
           margin-right: 30px;
         }
 
         i {
           color: #fff;
+          &:hover{
+            transition: 0.5s;
+            transform: scale(1.8);
+            color: $btn-yellow;
+          }
+  
         }
       }
     }
