--- a/css/_header.scss
+++ b/css/_header.scss
@@ -12,15 +12,13 @@ header {
     align-items: center;
     justify-content: space-between;
     gap: 78px;
-    // display: contents;
-    // border: 1px solid black;
 
     @media (min-width: 2500px) {
       max-width: 2048px;
     }
 
-    a{
-      margin: 0 auto 0 10px;
+    .logotype {
+      // margin: 0 auto 0 10px;
     }
  
     .menu-bars {
@@ -144,34 +142,3 @@ header {
     }
   }
 }
-
-
-
-
-    //___________________________________ nedan kan förmodligen tas bort om menyn fung enl sass-regler ovan
-      // .main-menu>nav>a {
-      //     display: inline-block;
-      //     text-decoration: none;
-      //     color: #191919;
-      //     margin-right: 35px;
-      //     position: relative;
-
-      //     &.active {
-      //         font-weight: 500;
-      //     }
-
-      //     &.active::after,
-      //     &:hover::after {
-      //         content: '';
-      //         position: absolute;
-      //         font-weight: 500;
-      //         height: 2px;
-      //         width: 15px;
-      //         background-color: #191919;
-      //         left: 50%;
-      //         bottom: -3px;
-      //         transform: translate((calc(50% - 15px)));
-      //     }
-      // }
-
-      //____________________________________________________
