--- a/css/index/_subscribe.scss
+++ b/css/index/_subscribe.scss
@@ -30,14 +30,9 @@
       font-size: 45px;
       color: $text-color-dark;
       font-weight: 700;
-      // margin-right: 30px;
       margin-bottom: 40px;
-
       text-align: center;
-      @media (min-width: 992px) {
-        // margin-bottom: 0;
-        // margin-right: 0;
-      }
+
       @media (min-width: 1200px) {
         margin-right: 160px;
       }
@@ -47,16 +42,15 @@
       border-radius: 25px;
       @media (min-width: 992px) {
         display: flex;
-        flex-direction: row;;
+        flex-direction: row;
         justify-content: center;
         align-items: center;
-
       }
       input {
         text-align: center;
         margin-bottom: 10px;
-          display: flex;
-          flex-direction: column;
+        display: flex;
+        flex-direction: column;
         color: $text-color-dark;
         text-decoration: none;
         padding: 15px 30px;
@@ -64,19 +58,20 @@
         border: 1px solid #1919191a;
         border-radius: 25px;
         outline: none;
-        // text-align: end;
 
         @media (min-width: 992px) {
-        margin-right: 20px;
-        margin-bottom: 0;
-  
+          margin-right: 20px;
+          margin-bottom: 0;
         }
       }
-      button {
+      .btn-yellow-scale {
         position: relative;
         border: none;
         z-index: 0;
-
+        &:hover {
+          transform: scale(1.1);
+          transition: 0.5s;
+        }
       }
     }
 
@@ -84,7 +79,6 @@
     }
 
     a {
-      // margin: 0 auto 0 17px;
     }
   }
 }
