--- a/css/style.scss
+++ b/css/style.scss
@@ -1,11 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&family=Hanken+Grotesk:wght@200;300;400;500;600&display=swap");
 @import "./variables";
+@import "./header";
 @import "./index/showcase";
 @import "./index/advertising";
 @import "./index/features";
 @import "./index/about";
-@import "./header";
 @import "./index/services";
 @import "./index/chooseUs";
 @import "./index/case";
@@ -13,8 +13,8 @@
 @import "./index/team";
 @import "./index/testimonial";
 @import "./index/articles-news";
-@import "./footer";
 @import "./contacts/contacts";
+@import "./footer";
 
 
 * {
@@ -98,7 +98,8 @@ h4 {
     // vid hover, ändra bakgrundsfärg + textfärg samt öka padding
   &:hover {
     background-color: $btn-black;
-    border: 5px solid $btn-black;
+    transition: 0.5s;
+    transform: scale(.8);
     color: $text-color-light;
   }
 }
@@ -120,7 +121,8 @@ h4 {
   // vid hover, ändra bakgrundsfärg + textfärg samt öka padding
   &:hover {
     background-color: $btn-black;
-    border: 5px solid $btn-black;
+    transition: 0.5s;
+    transform: scale(1.1);
     color: $text-color-light;
   }
 }
@@ -141,7 +143,8 @@ h4 {
   // Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
   &:hover {
     background-color: $btn-yellow;
-    border: 5px solid $btn-yellow;
+    transition: 0.5s;
+    transform: scale(1.1);
     color: $text-color-dark;
   }
 }
@@ -160,7 +163,8 @@ h4 {
     // Vid hover, ändra bakgrundsfärg + textfärg, samt öka padding
     &:hover {
     background-color: $btn-black;
-    border: 5px solid $btn-black;
+    transition: 0.5s;
+    transform: scale(1.1);
     color: $text-color-light;
   }
 }
